--- a/cakelogin/webroot/css/cake.css
+++ b/cakelogin/webroot/css/cake.css
@@ -27,15 +27,20 @@ a:active  {
     color:#2a6496;
     -webkit-transition:all 0.2s easeout;
     transition:all 0.2s ease-out;
+
 }
 
 .side-nav a,
 .top-nav-links a,
 th a,
 .actions a {
-    color: #606c76;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
 }
 
+.white{
+    color:#fff !important;
+}
 .side-nav a:hover,
 .side-nav a:focus,
 .actions a:hover,
